--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -1,6 +1,9 @@
 # 本番環境用の設定
 services:
   front-app:
+    build:
+      context: .
+      dockerfile: .devcontainer/frontend/Dockerfile.prod
     environment:
       NODE_ENV: "production"
   back-server:
@@ -11,7 +14,7 @@ services:
 
   ngrok:
     image: ngrok/ngrok:latest
-    container_name: ngrok-sv
+    container_name: ngrok-server
     depends_on:
       - front-app
     volumes:
