--- a/.devcontainer/backend/pyproject.toml
+++ b/.devcontainer/backend/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 flask = "^3.1.0"
+cloud-sql-python-connector = "^1.18.4"
+google-cloud-storage = "^3.3.1"
+sqlalchemy = "^2.0.43"
+pg8000 = "^1.31.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.2"
