fix: eslint v9ではignoreはeslint.config.jsでしか指定できない修正

--- a/frontend/nextjs-project/package.json
+++ b/frontend/nextjs-project/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint . --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
     "prettier:check": "prettier . --check --ignore-unknown",
     "prettier:write": "prettier . --write --ignore-unknown --list-different",
