update: Ruffの拡張機能を追加

--- a/.devcontainer/backend/devcontainer.json
+++ b/.devcontainer/backend/devcontainer.json
@@ -12,7 +12,8 @@
             "ms-ceintl.vscode-language-pack-ja",
             "ms-python.black-formatter",
             "samuelcolvin.jinjahtml",
-            "tamasefe.even-better-toml"
+            "tamasefe.even-better-toml",
+            "charliermarsh.ruff"
             ]
         }
     }
