--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,2 @@
 NGROK_AUTHTOKEN=0Xx0x0XXX0xXX0xXXX01XxXX101XXX_XXxXXX00XXX0xxXXx1
+ADC_JSON=/Users/hogeuser/.config/gcloud/application_default_credentials.json
