feat: データベースに接続するサンプルコードを作成

--- a/gcloud.env.sample
+++ b/gcloud.env.sample
@@ -2,3 +2,6 @@ GCP_PROJECT=gcp_project_name
 DB_NAME=db_name
 DB_USER=db_user
 GCS_BUCKET=gcs_bucket
+PROJECT_ID=0123456789
+SECRET_ID=secret_id
+VERSION_ID=1
