fix: Python のinclude path が正常に通るように設定を修正

--- a/.devcontainer/backend/devcontainer.json
+++ b/.devcontainer/backend/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "back-server",
     "dockerComposeFile": ["../../compose.yaml", "../../compose.dev.yaml"],
     "service": "back-server",
-    "workspaceFolder": "/backend/src",
+    "workspaceFolder": "/backend",
     "customizations": {
         "vscode": {
             "extensions": [
