--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Tomopu <https://github.com/Tomopu>"]
 description = ""
 readme = "README.md"
+packages = [{include = "src", from = "."}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -36,6 +37,3 @@ line-length = 120
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[[tool.poetry.packages]]
-include = "backend"
