--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ google-cloud-storage = "^3.3.1"
 sqlalchemy = "^2.0.43"
 pg8000 = "^1.31.4"
 google-cloud-secret-manager = "^2.24.0"
+geopy = "^2.4.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.2"
