--- a/compose.yaml
+++ b/compose.yaml
@@ -23,9 +23,11 @@ services:
       - gcloud.env
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: /var/secrets/adc.json
+      SERVICE_ACCOUNT_CREDENTIALS: /var/secrets/service_account.json
       PYTHONPATH: /backend
     volumes:
       - "${ADC_JSON}:/var/secrets/adc.json:ro"
+      - ./service_account.json:/var/secrets/service_account.json:ro
     ports:
       - "5000:5000"
     tty: true
