--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.28.1"
 pillow = "^11.3.0"
 python-dotenv = "^1.1.1"
 python-magic = "^0.4.27"
+geopy = "^2.4.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.2"
