--- a/.devcontainer/frontend/Dockerfile.prod
+++ b/.devcontainer/frontend/Dockerfile.prod
@@ -1,5 +1,6 @@
 FROM node:22-alpine AS base
 WORKDIR /app
+ENV NEXT_TELEMETRY_DISABLED=1
 
 # 依存関係のインストール
 FROM base AS deps
@@ -12,19 +13,20 @@ COPY frontend/nextjs-project ./
 RUN npm run build
 
 # 本番
-FROM base AS runner
+FROM node:22-alpine AS runner
+WORKDIR /app
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV PORT=3000
+ENV HOSTNAME=0.0.0.0
 
-# 本番依存だけをクリーンに入れる
-COPY frontend/nextjs-project/package.json frontend/nextjs-project/package-lock.json ./
-RUN npm ci --omit=dev
-
+# これらだけをコピーすれば動作する
+COPY --from=build /app/.next/standalone ./
 # ビルド成果物と静的ファイルをコピー
-COPY --from=build /app/.next ./.next
+COPY --from=build /app/.next/static ./.next/static
 COPY --from=build /app/public ./public
 
-# 非ルートで本番環境を実行
+# 非rootで実行
 USER node
 EXPOSE 3000
-CMD ["npm", "run", "start", "--", "-p", "3000", "-H", "0.0.0.0"]
+CMD ["node", "server.js"]
