--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     tty: true
     environment:
       NODE_ENV: "production"
-    hhealthcheck:
+    healthcheck:
       test: ['CMD-SHELL', 'wget -q -T 5 -O - http://localhost:3000/ > /dev/null 2>&1 || exit 1']
       interval: 15s
       timeout: 5s
