--- a/frontend/nextjs-project/package.json
+++ b/frontend/nextjs-project/package.json
@@ -22,6 +22,7 @@
     "next": "15.5.2",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2"
   },
