--- a/.devcontainer/backend/devcontainer.json
+++ b/.devcontainer/backend/devcontainer.json
@@ -7,6 +7,7 @@
         "vscode": {
             "extensions": [
                 "ms-python.python",
+                "ms-python.vscode-pylance",
                 "oderwat.indent-rainbow",
                 "ms-ceintl.vscode-language-pack-ja",
                 "samuelcolvin.jinjahtml",
