--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ pillow = "^11.3.0"
 python-dotenv = "^1.1.1"
 python-magic = "^0.4.27"
 geopy = "^2.4.1"
+google-cloud-discoveryengine = "^0.13.11"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.2"
