--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -44,6 +44,10 @@ jobs:
       cache_lockfiles: |
         frontend/nextjs-project/package-lock.json
       run: "npm run build"
+      env:
+          NEXT_PUBLIC_FB_API_KEY: ${{ secrets.NEXT_PUBLIC_FB_API_KEY }}
+          NEXT_PUBLIC_FB_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_FB_PROJECT_ID }}
+          NEXT_PUBLIC_FB_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FB_AUTH_DOMAIN }}
   
   # test:
   #   needs: [lint, prettier, build]
