--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -25,6 +25,7 @@ jobs:
       cache_lockfiles: |
         frontend/nextjs-project/package-lock.json
       run: "npm run lint"
+    secrets: inherit
 
   prettier:
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
@@ -34,7 +35,8 @@ jobs:
       cache_lockfiles: |
         frontend/nextjs-project/package-lock.json
       run: "npm run prettier:check"
-  
+    secrets: inherit
+
   build:
     needs: [lint, prettier]
     if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
@@ -44,10 +46,7 @@ jobs:
       cache_lockfiles: |
         frontend/nextjs-project/package-lock.json
       run: "npm run build"
-      env:
-          NEXT_PUBLIC_FB_API_KEY: ${{ secrets.NEXT_PUBLIC_FB_API_KEY }}
-          NEXT_PUBLIC_FB_PROJECT_ID: ${{ secrets.NEXT_PUBLIC_FB_PROJECT_ID }}
-          NEXT_PUBLIC_FB_AUTH_DOMAIN: ${{ secrets.NEXT_PUBLIC_FB_AUTH_DOMAIN }}
+    secrets: inherit
   
   # test:
   #   needs: [lint, prettier, build]
