--- a/.github/workflows/dispatch-deploy.yml
+++ b/.github/workflows/dispatch-deploy.yml
@@ -1,9 +1,12 @@
 name: Dispatch Deploy (calls branch workflow)
 
 on:
-  workflow_dispatch: {}   # 手動実行用
+  workflow_dispatch: {}
 
 jobs:
   call-deploy-on-branch:
+    permissions:
+      id-token: write   # ← callee が要求する権限
+      contents: read
     uses: Engineer-Guild-Hackathon/team-12-app/.github/workflows/deploy.yml@chore/cd-github-actions
     secrets: inherit
