fix: インポートパスが正常に解決されない問題を修正

--- a/infra/cloud-run-jobs/create-vertex-metadata/Dockerfile
+++ b/infra/cloud-run-jobs/create-vertex-metadata/Dockerfile
@@ -34,4 +34,4 @@ COPY backend/src/services/vertex_ai /backend/src/services/vertex_ai
 COPY backend/src/utils/db/ /backend/src/utils/db/
 
 # エントリポイント：バッチを 1 回実行して正常終了
-ENTRYPOINT ["python", "-u", "src/services/vertex_ai/create_vertex_metadata.py"]
+ENTRYPOINT ["python", "-m", "src.services.vertex_ai.create_vertex_metadata"]
